# mm_doorgym

./: .gitmodules  README.md  catkin_make.sh  docker_join.sh  docker_join_user.sh  docker_run.sh  docker_run_user.sh  environment.sh  install.sh  map.ply  start_EE6F.sh  start_ex1.sh  start_ex2.sh  start_ex3.sh  start_urban.sh  start_urban_tare.sh
.github/workflows/: main.yml
Docker/rtx20/dev/: build.sh  dockerfile
Docker/rtx20/user/: build.sh  dockerfile
Docker/rtx30/: build.sh
Docker/rtx30/dev/: dockerfile
Docker/rtx30/user/: build.sh  dockerfile
catkin_ws/src/behavior_tree/: CMakeLists.txt
catkin_ws/src/behavior_tree/config/: open_door.tree  robotx_drone.tree
catkin_ws/src/behavior_tree/include/behavior_tree/: behavior_tree.h  behavior_tree_implementation.h
catkin_ws/src/behavior_tree/launch/: behavior_tree.launch
catkin_ws/src/behavior_tree/rqt_perspectives/: behavior_tree.perspective
catkin_ws/src/behavior_tree/src/: behavior_tree.cpp  behavior_tree_implementation.cpp
catkin_ws/src/behavior_tree/src/behavior_tree/: behavior_tree.py  behavior_tree_graphviz.py  behavior_tree_node.py
catkin_ws/src/door_detector_632/: CMakeLists.txt  package.xml
catkin_ws/src/door_detector_632/launch/: box_detection.launch  detection.launch
catkin_ws/src/door_detector_632/src/: box.cpp  door_and_ball_v2.cpp
catkin_ws/src/door_detector_632/srv/: door.srv
catkin_ws/src/door_detector_sim/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/door_detector_sim/config/: all_doors.yaml  door_info.yaml
catkin_ws/src/door_detector_sim/launch/: door_detection.launch
catkin_ws/src/door_detector_sim/src/: door_and_ball.cpp  lidar_crop.cpp
catkin_ws/src/door_detector_urban/: CMakeLists.txt  package.xml
catkin_ws/src/door_detector_urban/launch/: door_detection.launch  lidar_crop.launch
catkin_ws/src/door_detector_urban/src/: door_detector_urban.cpp  vis_path.py  visualize_map.cpp
catkin_ws/src/open_door_bt/: CMakeLists.txt  package.xml
catkin_ws/src/open_door_bt/launch/: bt_door_open.launch
catkin_ws/src/open_door_bt/src/: door_condition.cpp  init.cpp  init_condition.cpp  open_door.cpp  reach_door.cpp  reach_door_condition.cpp  reach_goal.cpp  reach_goal_condition.cpp
catkin_ws/src/pokingbot_rl/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/pokingbot_rl/launch/: goal_rl_tf.launch
catkin_ws/src/pokingbot_rl/model/goal/policy_mmwave/: saved_model.pb
catkin_ws/src/pokingbot_rl/model/goal/policy_mmwave/variables/: variables.index
catkin_ws/src/pokingbot_rl/src/: goal_nav_tf.py  pub_gazebo_tf.py
catkin_ws/src/pokingbot_ros/: CMakeLists.txt  package.xml
catkin_ws/src/pokingbot_ros/launch/: goal_poking_tf.launch  goal_rl_tf.launch  pub_tf.launch
catkin_ws/src/pokingbot_ros/model/goal/policy/: saved_model.pb
catkin_ws/src/pokingbot_ros/model/goal/policy/variables/: variables.index
catkin_ws/src/pokingbot_ros/model/policy/: saved_model.pb
catkin_ws/src/pokingbot_ros/model/policy/variables/: variables.index
catkin_ws/src/pokingbot_ros/src/: goal_nav_tf.py  pub_gazebo_tf.py  tradition.py
examples/: urban_tare.md
procman/: EE6F  ex1  ex2  ex3  urban  urban_tare
rviz/: urban.rviz  urban_tare.rviz  visual.rviz
