<package>
  <name>door_detector_sim</name>
  <version>0.0.1</version>
  <description>Vehicle Simulator</description>
  <maintainer email="zhangji@cmu.edu">Ji Zhang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>gazebo_msgs</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <!-- path to models -->
    <gazebo_ros gazebo_model_path="${prefix}/mesh"/>
  </export>
</package>
